--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: dcassol
-head: dcassol
-author: Daniela Cassol
+title: samlou
+head: samlou
+author: Samantha Corber Lou
 description: 
 ---
